<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">EventManagerApp</string>
    
    <string name="btn_map">Kaart</string>
    <string name="btn_planning">planning</string>
    <string name="btn_news">nieuws</string>
    <string name="btn_options">Opties</string>
    
    <string name="option_refreshtime">Refresh news delay (sec)</string>
    <string name="option_newsnotification">Push news notifications</string>
    <string name="options_restartwarning">App might need to be restarted for some options to apply</string>
    
    <string name="title_activity__map">Activity_Map</string>

    <string name="btn_news_refresh">Vernieuw</string>
    
    <string name="server_address">http://www.jgeluk.net:8778/</string> <!-- Johan VPN -->
    <!-- <string name="server_address">http://86.86.1.171:8778/</string> Wisam Thuis PC-->
    
</resources>
