<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/app_name"
        android:textSize="25sp" />
    
    <Button
        android:id="@+id/btn_map"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_map" />
    
	<Button
        android:id="@+id/btn_planning"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_planning" />
        
	<Button
        android:id="@+id/btn_news"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_news" />
            
	<Button
        android:id="@+id/btn_options"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/btn_options" />

</LinearLayout>
