<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >

		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/option_refreshtime"
		    android:textSize="20sp" />
		
		<EditText
		    android:id="@+id/in_refreshtime"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="number" />

		<CheckBox
		    android:id="@+id/in_newsnotifications"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/option_newsnotification" />
		
		<TextView
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/options_restartwarning"
		    android:textSize="15sp" />
	</LinearLayout>
</ScrollView>
